# core

./: .gitignore  .npmignore  CMakeLists.txt  Cargo.toml  README.md  cliff.toml  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  jsonrpc-client-npm-package.yml  jsonrpc.yml  nexuschat-rpc-server.yml  nix.yml  publish-nexuschat-rpc-client-pypi.yml  repl.yml  upload-docs.yml
benches/: contacts.rs  create_account.rs  decrypting.rs  get_chat_msgs.rs  get_chatlist.rs  marknoticed_chat.rs  receive_emails.rs  search_msgs.rs  send_events.rs
draft/: group-sync.rst
nexuschat-contact-tools/: Cargo.toml
nexuschat-contact-tools/src/: lib.rs
nexuschat-ffi/: Cargo.toml  Doxyfile  build.rs  nexuschat.h
nexuschat-ffi/src/: lib.rs  nc_array.rs  string.rs
nexuschat-jsonrpc/: Cargo.toml
nexuschat-jsonrpc/src/: api.rs
nexuschat-jsonrpc/src/api/types/: chat.rs  contact.rs  events.rs  message.rs  mod.rs  qr.rs  webxnc.rs
nexuschat-jsonrpc/typescript/: package.json
nexuschat-jsonrpc/typescript/scripts/: generate-constants.js
nexuschat-jsonrpc/typescript/src/: client.ts
nexuschat-jsonrpc/typescript/test/: basic.ts  online.ts  test_base.ts
nexuschat-repl/: Cargo.toml
nexuschat-repl/src/: cmdline.rs  main.rs
nexuschat-rpc-client/: pyproject.toml
nexuschat-rpc-client/examples/: echobot_advanced.py  echobot_no_hooks.py
nexuschat-rpc-client/src/nexuschat_rpc_client/: __init__.py  account.py  client.py  const.py  events.py  message.py  nexuschat.py  pytestplugin.py  rpc.py
nexuschat-rpc-client/tests/: conftest.py  test_account_events.py  test_calls.py  test_cross_core.py  test_folders.py  test_iroh_webxnc.py  test_securejoin.py  test_something.py  test_webxnc.py
nexuschat-rpc-server/: Cargo.toml
nexuschat-rpc-server/npm-package/: index.d.ts  package.json
nexuschat-rpc-server/npm-package/scripts/: build_platform_package.py  update_optional_dependencies_and_version.js
nexuschat-rpc-server/npm-package/scripts/src/: make_package.py
nexuschat-rpc-server/npm-package/src/: const.js  errors.js
nexuschat-rpc-server/src/: main.rs
nexuschat-time/: Cargo.toml
nexuschat_derive/: Cargo.toml
python/: README.rst  pyproject.toml  setup.py  tox.ini
python/doc/: conf.py  index.rst
python/doc/cffi/: api.rst  examples.rst  install.rst  intro.rst  lapi.rst  manylinux.rst
python/doc/jsonrpc/: develop.rst  examples.rst  install.rst  intro.rst  reference.rst
python/src/nexuschat/: __init__.py  _build.py  account.py  chat.py  const.py  contact.py  cutil.py  events.py  hookspec.py  message.py  provider.py  testplugin.py  tracker.py
python/tests/: stress_test_db.py  test_0_complex_or_slow.py  test_1_online.py  test_3_offline.py  test_4_lowlevel.py
scripts/: cleanup_devpi_indices.py  create-provider-data-rs.py  make-rpc-testenv.sh  run-integration-tests.sh  run-python-test.sh  run-rpc-test.sh  run-rust-test.sh  run_all.sh  set_core_version.py  wheel-rpc-server.py
scripts/concourse/: README.md  docs_wheels.yml
src/: accounts.rs  aheader.rs  calls.rs  chat.rs  chatlist.rs  config.rs  configure.rs  constants.rs  contact.rs  context.rs  ephemeral.rs  events.rs  headerdef.rs  imap.rs  imex.rs  internals_for_benches.rs  key.rs  lib.rs  location.rs  login_param.rs  message.rs  mimefactory.rs  mimeparser.rs  peer_channels.rs  provider.rs  push.rs  qr.rs  receive_imf.rs  release.rs  securejoin.rs  smtp.rs  sql.rs  stats.rs  stock_str.rs  storage_usage.rs  summary.rs  test_utils.rs  tools.rs  transport.rs  webxnc.rs
src/blob/: blob_tests.rs
src/calls/: calls_tests.rs
src/chat/: chat_tests.rs
src/config/: config_tests.rs
src/contact/: contact_tests.rs
src/context/: context_tests.rs
src/ephemeral/: ephemeral_tests.rs
src/events/: chatlist_events.rs  payload.rs
src/imap/: client.rs  imap_tests.rs
src/imex/: transfer.rs
src/message/: message_tests.rs
src/mimeparser/: mimeparser_tests.rs  shared_secret_decryption_tests.rs
src/net/: dns.rs  http.rs  proxy.rs
src/provider/: data.rs
src/qr/: nclogin_scheme.rs  qr_tests.rs
src/receive_imf/: receive_imf_tests.rs
src/scheduler/: connectivity.rs
src/securejoin/: bob.rs  securejoin_tests.rs
src/sql/: migrations.rs
src/sql/migrations/: migrations_tests.rs
src/stats/: stats_tests.rs
src/tests/: verified_chats.rs
src/tests/pre_messages/: receiving.rs  sending.rs  util.rs
src/webxnc/: integration.rs  maps_integration.rs  webxnc_tests.rs
test-data/: core-1.86.0-backup.tar
