[package]
name = "nexuschat_ffi"
version = "2.49.0-dev"
description = "Nexuschat FFI"
edition = "2018"
readme = "README.md"
license = "MPL-2.0"

keywords = ["nexuschat", "chat", "openpgp", "email", "encryption"]
categories = ["cryptography", "std", "email"]

[lib]
name = "nexuschat"
crate-type = ["cdylib", "staticlib"]

[dependencies]
deltachat = { workspace = true, default-features = false }
deltachat-jsonrpc = { workspace = true }
libc = { workspace = true }
human-panic = { version = "2", default-features = false }
num-traits = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
yerpc = { workspace = true, features = ["anyhow_expose"] }

[features]
default = ["vendored"]
vendored = ["nexuschat/vendored", "nexuschat-jsonrpc/vendored"]

