[package]
name = "nexuschat-rpc-server"
version = "2.49.0-dev"
description = "NexusChat JSON-RPC server"
edition = "2021"
readme = "README.md"
license = "MPL-2.0"

keywords = ["nexuschat", "chat", "openpgp", "email", "encryption"]
categories = ["cryptography", "std", "email"]

[dependencies]
nexuschat-jsonrpc = { workspace = true }
nexuschat = { workspace = true }

anyhow = { workspace = true }
futures-lite = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["io-std"] }
tokio-util = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
yerpc = { workspace = true, features = ["anyhow_expose", "openrpc"] }

[features]
default = ["vendored"]
vendored = ["nexuschat-jsonrpc/vendored"]
